# PlanMe

./: .gitattributes  .gitignore  LICENSE  README.md  package.json  planme.sh  pnpm-lock.yaml  turbo.json
.claude/commands/: android-build.md  android-install.md
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  mobile.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs  sticker.rs
apps/desktop/src/components/CommandPalette/: CommandPalette.tsx  commandpalette.css
apps/desktop/src/components/Editor/: Editor.tsx  editor.css
apps/desktop/src/components/Settings/: Settings.tsx  settings.css
apps/desktop/src/components/Sidebar/: Sidebar.tsx  sidebar.css
apps/desktop/src/components/StatusBar/: StatusBar.tsx  statusbar.css
apps/desktop/src/hooks/: useFileManager.ts  useSync.ts
apps/desktop/src/lib/: fileManager.ts
apps/desktop/src/lib/sync/: client.ts  revisionTracker.ts  syncManager.ts
apps/desktop/src/stores/: editorStore.ts  stickerStore.ts  syncStore.ts  themeStore.ts
apps/desktop/src/styles/: global.css
apps/server/: Dockerfile  docker-compose.yml  package.json  tsconfig.json
apps/server/src/: index.ts  types.ts
apps/server/src/db/: index.ts  schema.ts
apps/server/src/middleware/: auth.ts
apps/server/src/routes/: auth.ts  documents.ts  sync.ts
(+3 files in other folders)
